tests/ui/symbol-names/trait-objects.v0.stderr
error: symbol-name(_RNvXs1_CsCRATE_HASH_13trait_objectsRDG_INtNtNtCsCRATE_HASH_4coresB_3opss5_8functions0_5FnMutTRL0_hEEp6OutputuEL_NtB<REF>_s0_3Bar6method)
  --> $DIR/trait-objects.rs:15:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(<&dyn for<'a> core[HASH]::ops::function::FnMut<(&'a u8,), Output = ()> as trait_objects[3c073c57f94bedc2]::Bar>::method)
  --> $DIR/trait-objects.rs:15:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<&dyn for<'a> core::ops::function::FnMut<(&'a u8,), Output = ()> as trait_objects::Bar>::method)
  --> $DIR/trait-objects.rs:15:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RNvXs3_CsCRATE_HASH_13trait_objectsRDG_INtNtNtCsCRATE_HASH_4coresB_3opss5_8functions0_5FnMutTRL0_hEEp6OutputuNtNtB<REF>_sA_6markersU_4SendEL_NtB<REF>_s2_3Foos_6method)
  --> $DIR/trait-objects.rs:27:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(<&dyn for<'a> core[HASH]::ops::function::FnMut<(&'a u8,), Output = ()> + core[HASH]::marker::Send as trait_objects[3c073c57f94bedc2]::Foo>::method)
  --> $DIR/trait-objects.rs:27:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<&dyn for<'a> core::ops::function::FnMut<(&'a u8,), Output = ()> + core::marker::Send as trait_objects::Foo>::method)
  --> $DIR/trait-objects.rs:27:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RNvXs5_CsCRATE_HASH_13trait_objectsRDG_INtNtNtCsCRATE_HASH_4coresB_3opss5_8functions0_5FnMutTRL0_hEEp6OutputuNtNtB<REF>_sA_6markersU_4SendEL_NtB<REF>_s4_3Bazs_6method)
  --> $DIR/trait-objects.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(<&dyn for<'a> core[HASH]::ops::function::FnMut<(&'a u8,), Output = ()> + core[HASH]::marker::Send as trait_objects[3c073c57f94bedc2]::Baz>::method)
  --> $DIR/trait-objects.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<&dyn for<'a> core::ops::function::FnMut<(&'a u8,), Output = ()> + core::marker::Send as trait_objects::Baz>::method)
  --> $DIR/trait-objects.rs:39:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

